# FinSights

./: .gitignore  AGENTS.md  README.md  blob-test.py  docker-compose.yml  requirements.txt
backend/: BACKEND.md  main.py
backend/app/flow/finsight/: README.md  pyproject.toml
backend/app/flow/finsight/src/finsight/: flow.py  main.py  orchestrator.py  test_flow.py
backend/app/flow/finsight/src/finsight/crews/finance_kpis_crew/: __init__.py  finance_kpis_crew.py
backend/app/flow/finsight/src/finsight/crews/finance_kpis_crew/config/: agents.yaml  tasks.yaml
backend/app/flow/finsight/src/finsight/crews/hybrid_rag_crew/: __init__.py  hybrid_rag_crew.py
backend/app/flow/finsight/src/finsight/crews/hybrid_rag_crew/config/: agents.yaml  tasks.yaml
backend/app/flow/finsight/src/finsight/crews/market_peers_crew/: __init__.py  market_peers_crew.py
backend/app/flow/finsight/src/finsight/crews/market_peers_crew/config/: agents.yaml  tasks.yaml
backend/app/flow/finsight/src/finsight/crews/relations_rag_crew/: __init__.py  relations_rag_crew.py
backend/app/flow/finsight/src/finsight/crews/report_crew/: __init__.py  report_crew.py
backend/app/flow/finsight/src/finsight/crews/risk_signals_crew/: __init__.py  risk_signals_crew.py
backend/app/flow/finsight/src/finsight/crews/router_crew/: __init__.py  router_crew.py
backend/app/flow/finsight/src/finsight/crews/synthesis_crew/: __init__.py  synthesis_crew.py
backend/app/flow/finsight/src/finsight/models/: __init__.py  contracts.py
backend/app/flow/finsight/src/finsight/utils/: README.md  __init__.py  llm.py
(+41 files in other folders)
